testsuite/tests/explicit-dicts/should_fail/all.T
test('CoerceDictNom', normal, compile_fail, [''])
test('ImportDictMissing', [expect_broken(0), extra_files(['ExportClassOnly.hs'])], multimod_compile, ['ImportDictMissing', '-v0'])
test('ImportMissingDictField', [expect_broken(0), extra_files(['ExportDictOnly.hs'])], multimod_compile, ['ImportMissingDictField', '-v0'])
test('Incoherence1', normal, compile_fail, ['-XDictionaryApplications -Werror=incoherence'])
test('Incoherence2', normal, compile_fail, ['-XDictionaryApplications -Werror=incoherence'])
test('Incoherence3', normal, compile_fail, ['-XDictionaryApplications -Werror=incoherence'])
test('Incoherence4', normal, compile_fail, ['-XDictionaryApplications -Werror=incoherence'])
test('Incoherence5', normal, compile_fail, ['-XDictionaryApplications -Werror=incoherence'])
test('MultipleDictsWithSameTyVar', normal, compile_fail, ['-XDictionaryApplications'])
test('MultipleMatches', normal, compile_fail, ['-XDictionaryApplications'])
test('MultiParamRoles', normal, compile_fail, ['-XDictionaryApplications'])
test('NoTyVar', normal, compile_fail, ['-XDictionaryApplications -Werror=incoherence'])
test('NotATypeClassConstraint', normal, compile_fail, ['-XDictionaryApplications'])
test('OverrideSomeMethodFunction', extra_files(['SomeClass.hs', 'SomeMethodFunction.hs', 'SomeClassInstance.hs']), multimod_compile_fail, ['OverrideSomeMethodFunction', '-v0 -XDictionaryApplications -Werror=incoherence'])
test('RoleNom', normal, compile_fail, ['-XDictionaryApplications'])
test('Roles1', normal, compile_fail, ['-XDictionaryApplications'])
test('Roles2', normal, compile_fail, ['-XDictionaryApplications'])
test('Roles3', normal, compile_fail, ['-XDictionaryApplications -Werror=incoherence'])
test('Roles4', normal, compile_fail, ['-XDictionaryApplications'])
test('Roles5', normal, compile_fail, ['-XDictionaryApplications'])
test('Roles6', normal, compile_fail, ['-XDictionaryApplications -Werror=incoherence'])
test('Roles7', normal, compile_fail, ['-XDictionaryApplications'])
test('Roles8', normal, compile_fail, ['-XDictionaryApplications'])
test('Roles9', normal, compile_fail, ['-XDictionaryApplications'])
test('WrongDictType', normal, compile_fail, ['-XDictionaryApplications -fdefer-type-errors'])
test('WrongDictType2', normal, compile_fail, ['-XDictionaryApplications -fdefer-type-errors'])
